Amends to Mac version

--- a/mac/DeveloperDvorak.bundle/Contents/Info.plist
+++ b/mac/DeveloperDvorak.bundle/Contents/Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>org.sil.ukelele.keyboardlayout.Developer Dvorak</string>
+	<string>com.apple.keyboardlayout.DeveloperDvorak</string>
 	<key>CFBundleName</key>
-	<string>Dev</string>
+	<string>DeveloperDvorak</string>
 	<key>CFBundleVersion</key>
-	<string></string>
-	<key>KLInfo_Dev</key>
+	<string>1.0.0</string>
+	<key>KLInfo_DeveloperDvorak</key>
 	<dict>
 		<key>TICapsLockLanguageSwitchCapable</key>
 		<false/>
 		<key>TISInputSourceID</key>
-		<string>org.sil.ukelele.keyboardlayout.Developer Dvorak</string>
+		<string>com.apple.keyboardlayout.DeveloperDvorak</string>
 		<key>TISIntendedLanguage</key>
 		<string>en</string>
 	</dict>
