--- a/mac/DeveloperDvorak.bundle/Contents/version.plist
+++ b/mac/DeveloperDvorak.bundle/Contents/version.plist
@@ -3,10 +3,10 @@
 <plist version="1.0">
 <dict>
 	<key>BuildVersion</key>
-	<string></string>
+	<string>1.0.0</string>
 	<key>ProjectName</key>
-	<string>Developer Dvorak</string>
+	<string>DeveloperDvorak</string>
 	<key>SourceVersion</key>
-	<string></string>
+	<string>1.0.0</string>
 </dict>
 </plist>
